--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,19 +3,20 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
-        
-    {
-        "type": "node",
-        "request": "attach",
-        "name": "Attach",
-        "port": 5858
-    },
+    "configurations": [        
         {
-            "type": "node",
+            "type": "chrome",
+            "request": "launch",
+            "name": "Launch Chrome",
+            "file": "${workspaceRoot}/kb.html",
+            //"url": "http://localhost:8080",
+            "webRoot": "${workspaceRoot}"
+        },
+        {
+
             "request": "launch",
             "name": "Launch Program",
-            "program": "${file}"
-        }
+            "program": "${workspaceRoot}/kb.html"                
+        }       
     ]
 }
